# write-githubstat

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/writegithubstat/: __init__.py  githubstat.py
