[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "write-githubstat"
packages = [
    { include = "writegithubstat", from = "src" },
]
version = "0.2.1"
readme = "README.md"
description = "write-githubstat makes it easy to collect, filter and save github statistics to csv files."
license = "Apache 2.0"
authors = ["David Vegh <david.andras.vegh+github@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.2"
requests = "^2.0.0"

[tool.poetry.urls]
homepage = "https://github.com/veghdev/write-githubstat"
documentation = "https://github.com/veghdev/write-githubstat"
repository = "https://github.com/veghdev/write-githubstat"
